# turbo-bible

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  deny.toml  justfile  rust-review.md  rust-toolchain.toml  ui-fix-plan.md
.claude/: settings.json
.claude/commands/: feature.md  release-checklist.md
.claude/hooks/: ui-change-check.sh
.claude/skills/bundle-translations/: SKILL.md
.claude/skills/regen-assets/: SKILL.md
.claude/skills/ui-review/: SKILL.md
.claude/skills/ui-review/assets/: review-template.md
.claude/skills/ui-review/references/: rubric.md  tui-specific.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/turbo-bible-data/: Cargo.toml
crates/turbo-bible-data/src/: audit.rs  build.rs  compress.rs  labels.rs  main.rs  manifest_source.rs  osis.rs  schema.rs  xrefs.rs
crates/turbo-bible-data/tests/: pipeline.rs
crates/turbo-bible-tui/: Cargo.toml  build.rs
crates/turbo-bible-tui/assets/: README.md  manifest.json
crates/turbo-bible-tui/src/: bookmark.rs  bundled.rs  config.rs  db.rs  fetch.rs  import.rs  install.rs  keys.rs  lib.rs  main.rs  manifest.rs  nav.rs  paths.rs  poetry.rs  quote.rs  reference.rs  render.rs  search.rs  state.rs  text.rs  theme.rs  update.rs  worddiff.rs
crates/turbo-bible-tui/src/ui/: bookmarks.rs  desktop.rs  dialog.rs  find.rs  footnote.rs  goto.rs  help.rs  menubar.rs  mod.rs  passage.rs  sidebar.rs  splash.rs  statusbar.rs  translations.rs
crates/turbo-bible-tui/tests/: e2e.rs
data/: manifest_source.toml
demo/: apple-touch-icon.py  demo.tape  og-image.py  og-image.tape  screenshots.tape  word-diff.tape
docs/: IMPORT.md  USAGE.md
docs/screenshots/: README.md
src/: bookmark.rs  config.rs  db.rs  import.rs  keys.rs  lib.rs  main.rs  nav.rs  paths.rs  quote.rs  render.rs  search.rs  state.rs  theme.rs
src/ui/: bookmarks.rs  desktop.rs  dialog.rs  find.rs  footnote.rs  goto.rs  help.rs  listnav.rs  menubar.rs  mod.rs  passage.rs  sidebar.rs  splash.rs  statusbar.rs  translations.rs
tests/: e2e.rs  import.rs
website/: .gitignore  404.html  CNAME  README.md  demo.webm  index.html  install.sh  robots.txt  sitemap.xml  styles.css
