[workspace]
resolver = "3"
members = ["crates/turbo-bible-tui", "crates/turbo-bible-data"]

[workspace.package]
edition = "2024"
# Real floor, enforced by the `msrv` CI job: libsqlite3-sys 0.38 (via
# rusqlite 0.40) calls `cfg_select!` in its build.rs, stabilized in 1.95.
# Anything older fails to compile, so the previously-declared 1.88 was a
# fiction. Pin rusqlite/libsqlite3-sys back if a lower floor is ever needed.
rust-version = "1.95"
license = "MIT OR Apache-2.0"
homepage = "https://turbo.bible"
repository = "https://github.com/mathiasror/turbo-bible"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40", features = ["backup", "bundled", "limits"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
time = "0.3"
toml = "1"
# Shared by both crates (the TUI decompresses bundled/fetched assets; the data
# pipeline compresses them) — pin once here so the two can't drift.
zstd = "0.13"

[workspace.lints.clippy]
# Encode the CI gate (`cargo clippy -- -D warnings` denies clippy::all) so a
# bare `cargo clippy` is as strict locally as in CI. priority = -1 keeps
# specific per-lint `#[allow(..., reason = ...)]` overrides working. Affects
# clippy runs only, not `cargo build`.
all = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
