[package]
name = "turbo-bible-data"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Offline data pipeline for turbo-bible. Builds per-translation SQLite files from scrollmapper JSON exports."
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "turbo-bible-data"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv = "1"
regex = "1"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir = "2"
zstd.workspace = true
