[package]
name = "turbo-bible"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Turbo Vision–styled terminal Bible reader with FTS5 search."
license.workspace = true
homepage.workspace = true
readme = "../../README.md"
repository.workspace = true
keywords = ["bible", "tui", "ratatui", "terminal", "turbo-vision"]
categories = ["command-line-utilities", "text-processing"]
build = "build.rs"

# Only en-kjv is embedded (~4 MB). The other 10 translations + xrefs
# are downloaded from GitHub Releases on demand by `src::fetch`,
# verified against the sha256s in `manifest.json`. Keeps the
# published tarball under crates.io's 10 MB default limit.
include = [
    "src/**/*",
    "build.rs",
    "assets/en-kjv.db.zst",
    "assets/manifest.json",
    "Cargo.toml",
    # Copied in by release.yml's `publish-crate` job from workspace
    # root before `cargo publish` runs. crates.io tarball needs its
    # own LICENSE copies for compliance with "MIT OR Apache-2.0".
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "NOTICE",
]

[dependencies]
anyhow.workspace = true
arboard = "3"
clap.workspace = true
crossterm = "0.29"
etcetera = "0.8"
ratatui = "0.30"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
smallvec = "1"
tempfile.workspace = true
time.workspace = true
toml.workspace = true
zstd = "0.13"

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
rexpect = "0.5"
